--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,10 @@ iovec = "0.1.2"
 libc = "0.2.42"
 log = "0.4.2"
 mio = "0.6.14"
-mio-uds = "0.6.5"
-tokio-reactor = { version = "0.1.1", path = "../tokio-reactor" }
-tokio-io = { version = "0.1.6", path = "../tokio-io" }
+mio-uds-windows = { git = "https://github.com/damonbarry/mio-uds-windows.git" }
+tokio-reactor = "0.1.1"
+tokio-io = "0.1.6"
 
 [dev-dependencies]
-tokio = { version = "0.1.6", path = "../" }
+tokio = "0.1.6"
 tempfile = "3"
