Clean up supporting files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,26 @@
 [package]
-name = "tokio-uds"
-# When releasing to crates.io:
-# - Update html_root_url.
-# - Update doc url
-# - Update CHANGELOG.md.
-# - Create "v0.2.x" git tag.
-version = "0.2.3"
-authors = ["Carl Lerche <me@carllerche.com>"]
+name = "tokio-uds-windows"
+version = "0.1.0"
 license = "MIT"
-repository = "https://github.com/tokio-rs/tokio"
-homepage = "https://github.com/tokio-rs/tokio"
-documentation = "https://docs.rs/tokio-uds/0.2.3/tokio_uds/"
-description = """
-Unix Domain sockets for Tokio
-"""
+authors = ["Damon Barry"]
+description = "Unix Domain sockets for Tokio...on Windows!"
+repository = "https://github.com/damonbarry/tokio-uds-windows"
+readme = "README.md"
+# keywords = ""
 categories = ["asynchronous"]
+exclude = [".gitignore"]
 
 [dependencies]
 bytes = "0.4.8"
 futures = "0.1.21"
 iovec = "0.1.2"
-libc = "0.2.42"
 log = "0.4.2"
 mio = "0.6.14"
-mio-uds-windows = { git = "https://github.com/damonbarry/mio-uds-windows.git" }
 tokio-reactor = "0.1.1"
 tokio-io = "0.1.6"
+
+[target.'cfg(windows)'.dependencies]
+mio-uds-windows = { git = "https://github.com/damonbarry/mio-uds-windows.git" }
 
 [dev-dependencies]
 tokio = "0.1.6"
